--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-rnd": "^10.5.2",
     "sharp": "^0.34.2",
     "zustand": "^5.0.5"
   },
